# axum-template

./: Cargo.toml  README.md
simple/: Cargo.toml  README.md
simple-generated/: Cargo.toml  README.md
simple-generated/src/: cli.rs  main.rs
simple-template/: Cargo.toml
simple-template-generated/: Cargo.toml
simple-template-generated/src/: main.rs
simple/src/: main.rs
