[package]
name = "simple-generated"
version = "0.1.0"
authors = ["Josh McKinney <joshka@users.noreply.github.com>"]
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-server = { version = "0.7.1", features = [
    "tls-rustls",
], git = "https://github.com/programatik29/axum-server", rev = "refs/pull/161/head" }
clap = { version = "4.5.23", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.2", default-features = false, features = ["tracing"] }
color-eyre = "0.6.3"
fs-err = "3.0.0"
rcgen = "0.13.2"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "net"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
webbrowser = "1.0.3"
