[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

[dependencies]
axum = "0.8.1"
clap = { version = "4.5.23", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.2", default-features = false, features = ["tracing"] }
color-eyre = "0.6.3"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "net"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
webbrowser = "1.0.3"
